feat: enhance screenshot functionality with width and height attributes
Added width and height properties to the screenshot results across mobile and computer SDKs. Updated integration tests and examples to validate these new attributes. Improved error handling in screenshot operations to provide clearer feedback on failures.